0032717: Modeling Algorithms - BRepBuilderAPI_Copy should not remove triangulation from surface-less faces

BRepBuilderAPI_Copy now ignores toCopyMesh flag for non-geometric shapes.